--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -10,18 +10,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Install depencies
       run: npm install
     - name: Build static assets
       run: npm run-script build
     - name: Set up Elixir
-      uses: erlef/setup-elixir@885971a72ed1f9240973bd92ab57af8c1aa68f24
+      uses: erlef/setup-beam@v1
       with:
         elixir-version: '1.11.4' # Define the elixir version [required]
         otp-version: '23.2.5' # Define the OTP version [required]
     - name: Restore dependencies cache
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
         path: deps
         key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
@@ -31,7 +31,7 @@ jobs:
     - name: Build static site
       run: mix serum.build
     - name: Deploy to Netlify
-      uses: nwtgck/actions-netlify@v1.1
+      uses: nwtgck/actions-netlify@v1.2
       with:
         production-deploy: true
         publish-dir: './site'
